--- a/public/test/index.html
+++ b/public/test/index.html
@@ -1,9 +1,11 @@
+
+
 <html>
 <head>
   <meta charset="UTF-8">
   <title>A greeting</title>
 </head>
 <body>
-  <h1>{{greeting}}, {{target}}!</h1>
+  <h1>Working, Pages!</h1>
 </body>
 </html>
